--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
         </script>
@@ -26,23 +26,29 @@
         }
     </style>
     <!-- <script type="module" src="./app.js"></script> -->
-    <script type="module" src="./app.js"></script>
+    <!-- <script type="module" src="./app.js"></script> -->
 </head>
 
 <body>
     <div class="container" id="mainPart">
-        <div class="col-md-12 " id="menuSection" style="margin-top:50px">
-        </div>
+        <!-- <div class="col-md-12 " id="menuSection" style="margin-top:50px"></div> -->
         <div class="col-md-12 " id="messageSection" style="margin-top:50px"></div>
-        <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px">
-        </div>
+        <!-- <div class="col-md-12 " id="mainActiveSection" style="margin-top:50px"></div> -->
         <div id="error"></div>
 
     </div>
 
 </body>
 <script>
-    window.location.href = `./views/mainpage/mainpage.html`
+    try {
+        if (window.location.href.includes("#")) {
+            throw new Error("with #, Direct url must have a special treatment " + window.location.href);
+        }
+        window.location.href = `./views/mainpage/mainpage.html`
+    } catch (error) {
+        document.querySelector("#messageSection").innerHTML = `<div class="alert alert-danger" style = "margin-top:50px" role = "alert" > ${error}</div > `;
+    }
+
 </script>
 
 </html>
