--- a/test/documentation_HS/documentation.html
+++ b/test/documentation_HS/documentation.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
+    <meta Content-Type="text/html">
     <meta http-equiv="Expires" content="0">
-    <link rel="icon" href="/yeshejs/favicon.png" />
+
     <title>Yeshe JS </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="HandheldFriendly" content="true">
@@ -15,8 +15,8 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -27,12 +27,9 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"> -->
     </script>
-    <link href="./documentation.css" rel="stylesheet" />
-    <style>
-        canvas {
-            border: 1px solid black;
-        }
-    </style>
+    <!-- <link href="./documentation.css" rel="stylesheet" /> -->
+    <!-- <link href="../../shared/assets/css/custom.css" rel="stylesheet" /> -->
+
     <!-- <script type="module" src="./app.js"></script> -->
 </head>
 
@@ -46,11 +43,11 @@
     </div>
 
     </div>
-</body>
-<script type="module">
 
-    import { startDocumentationController } from './documentationViewController.js'
-    startDocumentationController();
-</script>
+    <script type="module">
+        import { startDocumentationController } from './documentationViewController.js'
+        startDocumentationController();
+    </script>
+</body>
 
 </html>
