--- a/test/testlist2.html
+++ b/test/testlist2.html
@@ -50,7 +50,7 @@
         const dataListId = input.getAttribute('list');
         datalist.id = dataListId;
 
-        // let frBase = localStorage.getItem("bdd_genre_type");
+        // let frBase = sessionStorage.getItem("bdd_genre_type");
         // let base = JSON.parse(frBase);
 
         // base.forEach((option) => {
@@ -141,7 +141,7 @@
         let responseWS = await fetch(wsUrl);
 
         if (responseWS.ok) {
-            // *** Get the data and save in the localstorage
+            // *** Get the data and save in the sessionStorage
             if (responseWS.status === 500)
                 throw new Error("Trop de résultats, raffinez votre recherche");
             const data = await responseWS.json();
