--- a/test/testlist3.html
+++ b/test/testlist3.html
@@ -124,7 +124,7 @@
         let responseWS = await fetch(wsUrl);
 
         if (responseWS.ok) {
-            // *** Get the data and save in the localstorage
+            // *** Get the data and save in the sessionStorage
             if (responseWS.status === 500)
                 throw new Error("Trop de résultats, raffinez votre recherche");
             const data = await responseWS.json();
