--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 </body>
 <script type="module">
-    import { routerOld } from './routerold.js'
+    import { routerOld } from './shared/yesheAppservices/routerold.js'
     routerOld();
 </script>
 
